app-source-code/kubernetes/overlays/dev/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hola-mundobase
    environment: dev
  name: hola-mundobase
  namespace: dev-namespace
spec:
  replicas: null
  selector:
    matchLabels:
      app: hola-mundobase
  template:
    metadata:
      labels:
        app: hola-mundobase
        version: 1.0.0
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: hola-mundobase-config
        - secretRef:
            name: ecr-registry-secret
        image: 465344186354.dkr.ecr.us-east-1.amazonaws.com/hola-mundobase:1.0.0
        imagePullPolicy: Always
        name: hola-mundobase
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
      restartPolicy: Always
